--- a/stucts_spring_hibernate/src/main/webapp/WEB-INF/web.xml
+++ b/stucts_spring_hibernate/src/main/webapp/WEB-INF/web.xml
@@ -13,21 +13,16 @@
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
+    <!--加载配置文件-->
+    <context-param>
+        <param-name>contextConfigLocation</param-name>
+        <param-value>classpath:applicationContext.xml</param-value>
+    </context-param>
+
     <!-- spring的监听器配置开始 -->
-        <context-param>
-            <param-name>contextConfigLocation</param-name>
-             <param-value>classpath:applicationContext.xml</param-value>
-        </context-param>
-
-
-        <listener>
-            <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
-        </listener>
-
-
-
-
-
+    <listener>
+        <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+    </listener>
 
 
 </web-app>
